tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_patch-operator-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: syn-patch-operator/serving-cert
  creationTimestamp: null
  name: patch-operator-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: patch-operator-webhook-service
      namespace: syn-patch-operator
      path: /mutate-redhatcop-redhat-io-v1alpha1-patch
  failurePolicy: Fail
  name: mpatch.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - patches
  sideEffects: None
