tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: patch-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: patch-operator
    app.kubernetes.io/version: v0.1.9
    helm.sh/chart: patch-operator-v0.1.9
  name: patch-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: patch-operator
      app.kubernetes.io/name: patch-operator
      control-plane: patch-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: patch-operator
        app.kubernetes.io/name: patch-operator
        control-plane: patch-operator
    spec:
      containers:
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --tls-cert-file=/etc/certs/tls/tls.crt
        - --tls-private-key-file=/etc/certs/tls/tls.key
        - --v=0
        image: quay.io/redhat-cop/kube-rbac-proxy:v0.11.0
        imagePullPolicy: IfNotPresent
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
        volumeMounts:
        - mountPath: /etc/certs/tls
          name: patch-operator-certs
      - args:
        - --leader-elect
        command:
        - /manager
        image: quay.io/redhat-cop/patch-operator:v0.1.9
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: patch-operator
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: webhook-server-cert
          readOnly: true
      serviceAccountName: controller-manager
      volumes:
      - name: patch-operator-certs
        secret:
          defaultMode: 420
          secretName: patch-operator-certs
      - name: webhook-server-cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
