tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/rbac.authorization.k8s.io_v1_clusterrole_patch-operator-manager-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  creationTimestamp: null
  name: patch-operator-manager-role
rules:
- apiGroups:
  - ''
  resources:
  - events
  verbs:
  - create
  - get
  - list
  - patch
  - watch
- apiGroups:
  - ''
  resources:
  - groups
  - serviceaccounts
  - users
  verbs:
  - impersonate
- apiGroups:
  - ''
  resources:
  - serviceaccounts/token
  verbs:
  - create
- apiGroups:
  - '*'
  resources:
  - '*'
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - apiextensions.k8s.io
  resources:
  - customresourcedefinitions
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - authentication.k8s.io
  resources:
  - '*'
  verbs:
  - impersonate
- apiGroups:
  - redhatcop.redhat.io
  resources:
  - patches
  verbs:
  - create
  - delete
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - redhatcop.redhat.io
  resources:
  - patches/finalizers
  verbs:
  - update
- apiGroups:
  - redhatcop.redhat.io
  resources:
  - patches/status
  verbs:
  - get
  - patch
  - update
