tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/rbac.authorization.k8s.io_v1_clusterrole_patch-operator-metrics-reader.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: patch-operator-metrics-reader
rules:
  - nonResourceURLs:
      - /metrics
    verbs:
      - get
