tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/rbac.authorization.k8s.io_v1_clusterrolebinding_patch-operator-manager-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: patch-operator-manager-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: patch-operator-manager-role
subjects:
- kind: ServiceAccount
  name: controller-manager
  namespace: syn-patch-operator
