tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/rbac.authorization.k8s.io_v1_role_patch-operator-prometheus-k8s.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: patch-operator-prometheus-k8s
  namespace: syn-patch-operator
rules:
- apiGroups:
  - ''
  resources:
  - endpoints
  - pods
  - services
  verbs:
  - get
  - list
  - watch
