tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/rbac.authorization.k8s.io_v1_rolebinding_patch-operator-leader-election-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: patch-operator-leader-election-rolebinding
  namespace: syn-patch-operator
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: patch-operator-leader-election-role
subjects:
- kind: ServiceAccount
  name: controller-manager
  namespace: syn-patch-operator
