tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/rbac.authorization.k8s.io_v1_rolebinding_patch-operator-prometheus-k8s.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: patch-operator-prometheus-k8s
  namespace: syn-patch-operator
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: patch-operator-prometheus-k8s
subjects:
- kind: ServiceAccount
  name: prometheus-k8s
  namespace: openshift-monitoring
