tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/v1_service_patch-operator-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: ocp-patch-operator-certs
  labels:
    control-plane: patch-operator
  name: patch-operator-controller-manager-metrics-service
  namespace: syn-patch-operator
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: patch-operator
