tests/golden/defaults/patch-operator/patch-operator/01_helm_chart/patch-operator/templates/v1_service_patch-operator-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: ocp-webhook-server-cert
  name: patch-operator-webhook-service
  namespace: syn-patch-operator
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: patch-operator
